Project

General

Profile

Actions

Bug #19754

closed

rgw: S3 object uploads using the AWSv4's multi-chunk mode hang RadosGW

Added by Radoslaw Zarzynski about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Urgent
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
kraken
Regression:
Yes
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The bug affects PUTs employing the STREAMING-AWS4-HMAC-SHA256-PAYLOAD authentication mode. In such scenario, when RGWPutObj::get_data() returns 0, we don't break the loop in RGWPutObj::execute() anymore. In conjunction with overriding the len by s->aws4_auth->bl->length(), am indefinite repetition takes place.

Introduced in: 8c8ce72a8ecdfd6057cde2fe520a7f34ab94562c.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #19837: kraken: rgw: S3 object uploads using the AWSv4's multi-chunk mode hang RadosGWResolvedRadoslaw ZarzynskiActions
Actions #1

Updated by Radoslaw Zarzynski about 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Radoslaw Zarzynski
Actions #3

Updated by Orit Wasserman about 7 years ago

  • Backport changed from kraken to kraken, jewel
Actions #4

Updated by Orit Wasserman about 7 years ago

  • Backport changed from kraken, jewel to kraken
Actions #5

Updated by Radoslaw Zarzynski almost 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #6

Updated by Radoslaw Zarzynski almost 7 years ago

  • Copied to Backport #19837: kraken: rgw: S3 object uploads using the AWSv4's multi-chunk mode hang RadosGW added
Actions #7

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF