rgw: fix RadosGW hang during multi-chunk upload of AWSv4.

Fixes: http://tracker.ceph.com/issues/19754
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>
(cherry picked from commit 72c1e2e351d984d0425a20f2c772951cbc36f13e)